feat: deploy ollama again

--- a/kubernetes/apps/base/downloads/radarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/radarr/helmrelease.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -48,8 +48,8 @@ spec:
               RADARR__UPDATE__BRANCH: develop
               TZ: America/Edmonton
             envFrom:
-            - secretRef:
-                name: radarr-secret
+              - secretRef:
+                  name: radarr-secret
             probes:
               liveness: &probes
                 enabled: true
@@ -106,4 +106,4 @@ spec:
         server: voyager.internal
         path: /mnt/user/data
         globalMounts:
-        - path: /data
+          - path: /data
