--- a/kubernetes/apps/base/downloads/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/bazarr/app/helmrelease.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -40,8 +40,8 @@ spec:
                     name: bazarr-pguser-bazarr
                     key: password
             envFrom:
-            - secretRef:
-                name: bazarr-secret
+              - secretRef:
+                  name: bazarr-secret
             probes:
               liveness: &probes
                 enabled: true
@@ -126,7 +126,7 @@ spec:
         server: voyager.internal
         path: /mnt/user/data
         globalMounts:
-        - path: /data
+          - path: /data
       log:
         type: emptyDir
         globalMounts:
