--- a/kubernetes/apps/base/downloads/metube/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/metube/helmrelease.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -64,5 +64,5 @@ spec:
         server: voyager.internal
         path: /mnt/user/data
         globalMounts:
-        - path: /downloads
-          subPath: metube
+          - path: /downloads
+            subPath: metube
