--- a/kubernetes/apps/base/downloads/mylar/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/mylar/helmrelease.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -41,9 +41,9 @@ spec:
     # defaultPodOptions:
     #   securityContext:
     #     runAsNonRoot: true
-        # runAsUser: 1000
-        # runAsGroup: 100
-        # fsGroup: 100
+    # runAsUser: 1000
+    # runAsGroup: 100
+    # fsGroup: 100
     #     fsGroupChangePolicy: OnRootMismatch
     #     seccompProfile: { type: RuntimeDefault }
     service:
