--- a/kubernetes/apps/base/downloads/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/qbittorrent/tools/helmrelease.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -32,12 +32,15 @@ spec:
                 valueFrom:
                   fieldRef:
                     fieldPath: metadata.namespace
-            args: [
-              "reannounce",
-              "--process-seeding",
-              "--server", "qbittorrent.$(POD_NAMESPACE).svc.cluster.local",
-              "--port", "80"
-            ]
+            args:
+              [
+                "reannounce",
+                "--process-seeding",
+                "--server",
+                "qbittorrent.$(POD_NAMESPACE).svc.cluster.local",
+                "--port",
+                "80",
+              ]
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
