--- a/kubernetes/apps/base/downloads/recyclarr/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/recyclarr/helmrelease.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -49,9 +49,9 @@ spec:
         type: configMap
         name: recyclarr-configmap
         globalMounts:
-        - path: /config/recyclarr.yml
-          subPath: recyclarr.yml
-          readOnly: true
+          - path: /config/recyclarr.yml
+            subPath: recyclarr.yml
+            readOnly: true
       config-logs:
         type: emptyDir
         globalMounts:
