--- a/kubernetes/apps/base/downloads/sabnzbd/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/sabnzbd/helmrelease.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -39,8 +39,8 @@ spec:
                 sab.jory.dev,
                 sabnzbd.jory.dev
             envFrom:
-            - secretRef:
-                name: sabnzbd-secret
+              - secretRef:
+                  name: sabnzbd-secret
             probes:
               liveness: &probes
                 enabled: true
@@ -105,5 +105,5 @@ spec:
         server: voyager.internal
         path: /mnt/user/data
         globalMounts:
-        - path: /downloads
-          subPath: usenet
+          - path: /downloads
+            subPath: usenet
