--- a/kubernetes/apps/base/games/core-keeper/helmrelease.yaml
+++ b/kubernetes/apps/base/games/core-keeper/helmrelease.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -38,8 +38,8 @@ spec:
               # SERVER_IP: 0.0.0.0 # Only used if port is set. Sets the address that the server will bind to.
               # SERVER_PORT: &port "27015" # What port to bind to. If not set, then the server will use the Steam relay network. If set the clients will connect to the server directly and the port needs to be open.
             envFrom:
-            - secretRef:
-                name: core-keeper-secret
+              - secretRef:
+                  name: core-keeper-secret
             probes:
               liveness: &disabled
                 enabled: false
@@ -82,7 +82,7 @@ spec:
       config:
         existingClaim: *app
         globalMounts:
-        - path: *datapath
+          - path: *datapath
       files:
         existingClaim: core-keeper-server-files
         globalMounts:
