--- a/kubernetes/apps/base/games/palworld/helmrelease.yaml
+++ b/kubernetes/apps/base/games/palworld/helmrelease.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -50,8 +50,8 @@ spec:
               ## Webhook Settings
               WEBHOOK_ENABLED: true
             envFrom:
-            - secretRef:
-                name: palworld-secret
+              - secretRef:
+                  name: palworld-secret
             probes:
               liveness: &disabled
                 enabled: false
@@ -73,8 +73,8 @@ spec:
               RCON_PORT: *rcon-port
               SAVE_DIRECTORY: /palworld
             envFrom:
-            - secretRef:
-                name: palworld-secret
+              - secretRef:
+                  name: palworld-secret
             resources:
               limits:
                 memory: 256Mi
@@ -129,7 +129,7 @@ spec:
       config:
         existingClaim: *app
         globalMounts:
-        - path: /palworld
+          - path: /palworld
       cache:
         existingClaim: palworld-cache
         globalMounts:
