--- a/kubernetes/apps/base/media/plex/movie-roulette/helmrelease.yaml
+++ b/kubernetes/apps/base/media/plex/movie-roulette/helmrelease.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -24,7 +24,7 @@ spec:
         containers:
           app:
             image:
-              repository:  ghcr.io/sahara101/movie-roulette
+              repository: ghcr.io/sahara101/movie-roulette
               tag: v4.0.1@sha256:09e03881b5dbbf8fc81e094f489c616c37fd405f7880f179e955f63819d3827a
             env:
               #Homepage ENV
