--- a/kubernetes/apps/base/media/wizarr/helmrelease.yaml
+++ b/kubernetes/apps/base/media/wizarr/helmrelease.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -24,7 +24,7 @@ spec:
         containers:
           app:
             image:
-              repository:  ghcr.io/wizarrrr/wizarr
+              repository: ghcr.io/wizarrrr/wizarr
               tag: 4.2.0
             env:
               TZ: America/Edmonton
