--- a/kubernetes/apps/base/self-hosted/free-game-notifier/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/free-game-notifier/helmrelease.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -21,7 +21,7 @@ spec:
       free-game-notifier:
         type: cronjob
         cronjob:
-          schedule: '0 16 * * THU'
+          schedule: "0 16 * * THU"
           successfulJobsHistory: 0
         containers: &container
           app:
