--- a/kubernetes/apps/base/self-hosted/paperless/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/paperless/helmrelease.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -67,8 +67,8 @@ spec:
               # User Permissions
               USERMAP_GID: "65542"
             envFrom:
-            - secretRef:
-                name: paperless-secret
+              - secretRef:
+                  name: paperless-secret
             resources:
               requests:
                 cpu: 15m
