--- a/kubernetes/apps/base/self-hosted/rss-forwarder/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/rss-forwarder/helmrelease.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://1n1raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -42,6 +42,6 @@ spec:
         type: secret
         name: rss-forwarder
         globalMounts:
-        - path: /data/config.toml
-          subPath: config.toml
-          readOnly: true
+          - path: /data/config.toml
+            subPath: config.toml
+            readOnly: true
