--- a/kubernetes/apps/base/self-hosted/ollama/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/ollama/helmrelease.yaml
@@ -29,48 +29,20 @@ spec:
           app:
             image:
               repository: ghcr.io/tyzbit/ollama-intel-gpu
-              # tag: latest
-              tag: ipex-llm-v.0.0.1-2
-              # tag: latest@sha256:36da76816d399b80127c043261df912cfa7ee73bde0b22f52a75178b236b1eea
-            # image:
-            #   repository: docker.io/ollama/ollama
-            #   tag: 0.6.5
+              tag: latest
+              # tag: ipex-llm-v.0.0.1-2
             securityContext:
               privileged: true
-            # command: [tail,-f,/dev/null]
             env:
-              # --- Intel GPU
-              OLLAMA_MAX_LOADED_MODELS: "1"
-              OLLAMA_NUM_PARALLEL: "1"
-              # OLLAMA_NUM_GPU: "1"
-              SYCL_CACHE_PERSISTENT: "1"
-              IPEX_LLM_NUM_CTX: "4096"
-              SYCL_PI_LEVEL_ZERO_USE_IMMEDIATE_COMMANDLISTS: "0"
-              IPEX_LLM_MODEL_SOURCE: modelscope
-              # ---
-              TZ: America/Edmonton
-              # OLLAMA_INTEL_GPU: "1" # doesn't work right now, experimental
-              HSA_OVERRIDE_GFX_VERSION: 11.0.1 # force to use graphics card
-              OLLAMA_HOST: 0.0.0.0
-              OLLAMA_ORIGINS: "*"
               OLLAMA_MODELS: &modelPath /models
-              OLLAMA_LOAD_TIMEOUT: "600"
-              OLLAMA_CONTEXT_LENGTH: "4096"
-              # OLLAMA_NUM_PARALLEL: "16"
-            # probes:
-            #   liveness:
-            #     enabled: true
-            #     type: HTTP
-            #   readiness:
-            #     enabled: true
-            #     custom: true
-            #     spec:
-            #       exec: {command: [sh,-c,/usr/bin/ollama run gemma3:4b ""]}
+              ONEAPI_DEVICE_SELECTOR: level_zero:0
+              IPEX_LLM_NUM_CTX: 16384
             resources:
               requests:
                 cpu: 200m
               limits:
                 memory: 16Gi
+                gpu.intel.com/i915: 1
         pod:
           affinity:
             podAntiAffinity:
