feat: add open-webui

--- a/kubernetes/apps/main/llm/kustomization.yaml
+++ b/kubernetes/apps/main/llm/kustomization.yaml
@@ -2,13 +2,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: self-hosted
+namespace: llm
 components:
   - ../../../components/common
 resources:
-  - ./actual/ks.yaml
-  - ./archiveteam/ks.yaml
-  - ./atuin/ks.yaml
-  - ./lubelogger/ks.yaml
-  - ./paperless/ks.yaml
-  - ./wyze-bridge/ks.yaml
+  - ./ollama/ks.yaml
+  - ./open-webui/ks.yaml
+  - ./searxng/ks.yaml
