--- a/kubernetes/apps/main/llm/ollama/ks.yaml
+++ b/kubernetes/apps/main/llm/ollama/ks.yaml
@@ -11,7 +11,7 @@ spec:
   components:
     - ../../../../components/gatus/guarded
   interval: 1h
-  path: ./kubernetes/apps/base/self-hosted/ollama
+  path: ./kubernetes/apps/base/llm/ollama
   postBuild:
     substitute:
       APP: *app
@@ -22,6 +22,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: self-hosted
+  targetNamespace: llm
   timeout: 5m
   wait: false
