--- a/kubernetes/apps/main/llm/searxng/ks.yaml
+++ b/kubernetes/apps/main/llm/searxng/ks.yaml
@@ -27,6 +27,7 @@ spec:
     substitute:
       APP: *app
       CLUSTER: main
+      GATUS_SUBDOMAIN: search
   prune: true
   retryInterval: 2m
   sourceRef:
