--- a/kubernetes/apps/main/llm/open-webui/ks.yaml
+++ b/kubernetes/apps/main/llm/open-webui/ks.yaml
@@ -34,6 +34,7 @@ spec:
     substitute:
       APP: *app
       CLUSTER: main
+      GATUS_SUBDOMAIN: chat
   prune: true
   retryInterval: 2m
   sourceRef:
