--- a/kubernetes/apps/main/llm/searxng/ks.yaml
+++ b/kubernetes/apps/main/llm/searxng/ks.yaml
@@ -3,25 +3,37 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app ollama
+  name: &app searxng
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   components:
+    - ../../../../components/dragonfly
     - ../../../../components/gatus/guarded
+    - ../../../../components/postgres
+    - ../../../../components/volsync
+  dependsOn:
+    - name: dragonfly-operator
+      namespace: database
+  healthCheckExprs:
+    - apiVersion: dragonflydb.io/v1alpha1
+      kind: Dragonfly
+      failed: status.phase != 'ready'
+      current: status.phase == 'ready'
   interval: 1h
-  path: ./kubernetes/apps/base/self-hosted/ollama
+  path: ./kubernetes/apps/base/llm/searxng
   postBuild:
     substitute:
       APP: *app
       CLUSTER: main
+      GATUS_SUBDOMAIN: search
   prune: true
   retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: self-hosted
+  targetNamespace: llm
   timeout: 5m
   wait: false
