feat: cleanup postgres

--- a/kubernetes/apps/base/llm/open-webui/helmrelease.yaml
+++ b/kubernetes/apps/base/llm/open-webui/helmrelease.yaml
@@ -33,11 +33,11 @@ spec:
               SEARXNG_QUERY_URL: http://searxng:8080/search?q=<query>
               ENABLE_WEBSOCKET_SUPPORT: "true"
               WEBSOCKET_MANAGER: "redis"
-              WEBSOCKET_REDIS_URL: ollama-dragonfly
+              WEBSOCKET_REDIS_URL: open-webui-dragonfly
               DATABASE_URL:
                 valueFrom:
                   secretKeyRef:
-                    name: ollama-pguser-ollama
+                    name: open-webui-pguser-open-webui
                     key: pgbouncer-uri
             resources:
               requests:
