--- a/kubernetes/apps/main/llm/open-webui/ks.yaml
+++ b/kubernetes/apps/main/llm/open-webui/ks.yaml
@@ -44,3 +44,9 @@ spec:
   targetNamespace: llm
   timeout: 5m
   wait: false
+  patches:
+    - patch: |-
+        - op: remove
+          path: /spec/dataSource
+      target:
+        kind: PostgresCluster
