--- a/kubernetes/apps/base/llm/open-webui/helmrelease.yaml
+++ b/kubernetes/apps/base/llm/open-webui/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
               SEARXNG_QUERY_URL: http://searxng:8080/search?q=<query>
               ENABLE_WEBSOCKET_SUPPORT: "true"
               WEBSOCKET_MANAGER: "redis"
-              WEBSOCKET_REDIS_URL: open-webui-dragonfly
+              WEBSOCKET_REDIS_URL: redis://open-webui-dragonfly:6379
               DATABASE_URL:
                 valueFrom:
                   secretKeyRef:
