fix: tweak searxng

--- a/kubernetes/apps/base/llm/open-webui/helmrelease.yaml
+++ b/kubernetes/apps/base/llm/open-webui/helmrelease.yaml
@@ -29,6 +29,7 @@ spec:
             env:
               OLLAMA_BASE_URL: http://ollama:11434
               ENABLE_RAG_WEB_SEARCH: true
+              ENABLE_SEARCH_QUERY: true
               RAG_WEB_SEARCH_ENGINE: searxng
               SEARXNG_QUERY_URL: http://searxng:8080/search?q=<query>
               ENABLE_WEBSOCKET_SUPPORT: "true"
