--- a/kubernetes/apps/base/llm/searxng/resources/settings.yml
+++ b/kubernetes/apps/base/llm/searxng/resources/settings.yml
@@ -8,14 +8,15 @@ server:
   public_instance: false
 
 search:
-  autocomplete: google
+  autocomplete: duckduckgo
   favicon_resolver: duckduckgo
   languages:
     - all
     - en
     - en-US
-    - pt
-    - pt-PT
+  formats:
+    - html
+    - json
 
 general:
   instance_name: LDS Search
@@ -38,7 +39,6 @@ categories_as_tabs:
 enabled_plugins:
   - Basic Calculator
   - Hash plugin
-  - Hostnames plugin
   - Open Access DOI rewrite
   - Self Informations
   - Tracker URL remover
