feat: make openui external

--- a/kubernetes/apps/base/llm/open-webui/helmrelease.yaml
+++ b/kubernetes/apps/base/llm/open-webui/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
       app:
         hostnames: ["chat.jory.dev"]
         parentRefs:
-          - name: internal
+          - name: external
             namespace: kube-system
             sectionName: https
         rules:
