feat: update searxng image

--- a/kubernetes/apps/base/llm/searxng/helmrelease.yaml
+++ b/kubernetes/apps/base/llm/searxng/helmrelease.yaml
@@ -25,8 +25,8 @@ spec:
         containers:
           main:
             image:
-              repository: docker.io/searxng/searxng
-              tag: 2024.6.30-39aaac40d
+              repository: ghcr.io/searxng/searxng
+              tag: 2025.5.17-86373e7@sha256:2f45ccc0b330faa47d8706de883c6e583b38806e32b51172d93c381ce1d92f0b
             env:
               SEARXNG_BASE_URL: https://search.jory.dev
               SEARXNG_URL: https://search.jory.dev
