fix: update reference

--- a/kubernetes/apps/base/media/wizarr/helmrelease.yaml
+++ b/kubernetes/apps/base/media/wizarr/helmrelease.yaml
@@ -50,9 +50,7 @@ spec:
             port: &port 5690
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.jory.dev"
-          - join.jory.dev
+        hostnames: ["join.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
