--- a/kubernetes/apps/base/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/qbittorrent/app/helmrelease.yaml
@@ -92,9 +92,7 @@ spec:
             protocol: TCP
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.jory.dev"
-          - qb.jory.dev
+        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
         parentRefs:
           - name: internal
             namespace: kube-system
