--- a/kubernetes/apps/base/downloads/sabnzbd/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/sabnzbd/helmrelease.yaml
@@ -86,9 +86,7 @@ spec:
             port: *port
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.jory.dev"
-          - sab.jory.dev
+        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
         parentRefs:
           - name: internal
             namespace: kube-system
