--- a/kubernetes/apps/base/home-automation/home-assistant/helmrelease.yaml
+++ b/kubernetes/apps/base/home-automation/home-assistant/helmrelease.yaml
@@ -81,9 +81,7 @@ spec:
             port: &codeserverPort 12321
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.jory.dev"
-          - hass.jory.dev
+        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
