--- a/kubernetes/apps/base/media/ersatztv/helmrelease.yaml
+++ b/kubernetes/apps/base/media/ersatztv/helmrelease.yaml
@@ -68,9 +68,7 @@ spec:
             port: &port 8409
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.jory.dev"
-          - tv.jory.dev
+        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
         parentRefs:
           - name: internal
             namespace: kube-system
