--- a/kubernetes/apps/base/media/jellyseerr/helmrelease.yaml
+++ b/kubernetes/apps/base/media/jellyseerr/helmrelease.yaml
@@ -64,9 +64,7 @@ spec:
             port: *port
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.jory.dev"
-          - requests.jory.dev
+        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
