--- a/kubernetes/apps/base/media/kavita/helmrelease.yaml
+++ b/kubernetes/apps/base/media/kavita/helmrelease.yaml
@@ -44,9 +44,7 @@ spec:
             port: &port 5000
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.jory.dev"
-          - comics.jory.dev
+        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
