--- a/kubernetes/apps/base/media/wizarr/helmrelease.yaml
+++ b/kubernetes/apps/base/media/wizarr/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
             port: &port 5690
     route:
       app:
-        hostnames: ["join.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
