--- a/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
@@ -405,8 +405,8 @@ spec:
             sectionName: https
         rules:
           - backendRefs:
-              - name: acars-hub
-                port: 80
+              - identifier: acars-hub
+                port: *port
     persistence:
       acars-hub:
         existingClaim: *app
