--- a/kubernetes/apps/base/self-hosted/atuin/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/atuin/helmrelease.yaml
@@ -96,9 +96,7 @@ spec:
             scrapeTimeout: 10s
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.jory.dev"
-          - sh.jory.dev
+        hostnames: ["sh.jory.dev"]
         parentRefs:
           - name: internal
             namespace: kube-system
