--- a/kubernetes/apps/main/downloads/qbittorrent/ks.yaml
+++ b/kubernetes/apps/main/downloads/qbittorrent/ks.yaml
@@ -17,6 +17,7 @@ spec:
     substitute:
       APP: *app
       CLUSTER: main
+      GATUS_SUBDOMAIN: qb
   prune: true
   retryInterval: 2m
   sourceRef:
