--- a/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/httproute.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/httproute.yaml
@@ -5,7 +5,7 @@ kind: HTTPRoute
 metadata:
   name: rook-ceph-dashboard
 spec:
-  hostnames: ["rook.jory.dev"]
+  hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
   parentRefs:
     - name: internal
       namespace: kube-system
