--- a/kubernetes/apps/base/self-hosted/meshcentral/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/meshcentral/helmrelease.yaml
@@ -55,9 +55,7 @@ spec:
             port: &port 8080
     route:
       app:
-        hostnames:
-          - "{{ .Release.Name }}.jory.dev"
-          - *host
+        hostnames: [*host]
         parentRefs:
           - name: internal
             namespace: kube-system
