feat: update to use cluster ollama

--- a/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/acars/helmrelease.yaml
@@ -117,7 +117,7 @@ spec:
               FILTER_CRITERIA_HAS_TEXT: "true"
               FILTER_OLLAMA_FILTER_ON_FAILURE: "true"
               FILTER_OLLAMA_MODEL: llama3.2
-              FILTER_OLLAMA_URL: http://voyager.internal:11434
+              FILTER_OLLAMA_URL: https://ollama.jory.dev
               FILTER_OLLAMA_PROMPT: &prompt |
                 This message was sent between aircraft and air traffic control.
                 Rarely, messages like these have prose in them that
