feat: make domain a little more DRY

--- a/kubernetes/apps/base/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/base/downloads/qbittorrent/app/helmrelease.yaml
@@ -92,7 +92,7 @@ spec:
             protocol: TCP
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: internal
             namespace: kube-system
