--- a/kubernetes/apps/base/home-automation/home-assistant/helmrelease.yaml
+++ b/kubernetes/apps/base/home-automation/home-assistant/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
             port: &codeserverPort 12321
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
