--- a/kubernetes/apps/base/media/ersatztv/helmrelease.yaml
+++ b/kubernetes/apps/base/media/ersatztv/helmrelease.yaml
@@ -68,7 +68,7 @@ spec:
             port: &port 8409
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: internal
             namespace: kube-system
