--- a/kubernetes/apps/base/media/kavita/helmrelease.yaml
+++ b/kubernetes/apps/base/media/kavita/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
             port: &port 5000
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
