--- a/kubernetes/apps/base/network/echo/helmrelease.yaml
+++ b/kubernetes/apps/base/network/echo/helmrelease.yaml
@@ -84,7 +84,7 @@ spec:
             scrapeTimeout: 10s
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
