--- a/kubernetes/apps/base/observability/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/kube-prometheus-stack/helmrelease.yaml
@@ -135,7 +135,7 @@ spec:
       route:
         main:
           enabled: true
-          hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+          hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
           parentRefs:
             - name: internal
               namespace: kube-system
