--- a/kubernetes/apps/base/security/authentik/httproute.yaml
+++ b/kubernetes/apps/base/security/authentik/httproute.yaml
@@ -5,7 +5,7 @@ kind: HTTPRoute
 metadata:
   name: authentik
 spec:
-  hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+  hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
   parentRefs:
     - name: external
       namespace: kube-system
