--- a/kubernetes/apps/base/self-hosted/wyze-bridge/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/wyze-bridge/helmrelease.yaml
@@ -76,7 +76,7 @@ spec:
             port: 8889
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: internal
             namespace: kube-system
