--- a/kubernetes/apps/base/flux-system/headlamp/httproute.yaml
+++ b/kubernetes/apps/base/flux-system/headlamp/httproute.yaml
@@ -5,7 +5,7 @@ kind: HTTPRoute
 metadata:
   name: headlamp
 spec:
-  hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+  hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
   parentRefs:
     - name: internal
       namespace: kube-system
