--- a/kubernetes/apps/base/llm/searxng/helmrelease.yaml
+++ b/kubernetes/apps/base/llm/searxng/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
             port: *port
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: internal
             namespace: kube-system
