--- a/kubernetes/apps/base/media/jellyseerr/helmrelease.yaml
+++ b/kubernetes/apps/base/media/jellyseerr/helmrelease.yaml
@@ -64,7 +64,7 @@ spec:
             port: *port
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
