--- a/kubernetes/apps/base/observability/gatus/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/gatus/helmrelease.yaml
@@ -91,7 +91,7 @@ spec:
           - port: http
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
