--- a/kubernetes/apps/base/self-hosted/archiveteam/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/archiveteam/helmrelease.yaml
@@ -53,7 +53,7 @@ spec:
             port: &port 8001
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: internal
             namespace: kube-system
