--- a/kubernetes/apps/base/self-hosted/thelounge/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/thelounge/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
             port: &port 9000
     route:
       app:
-        hostnames: ["${GATUS_SUBDOMAIN}.jory.dev"]
+        hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.jory.dev"]
         parentRefs:
           - name: external
             namespace: kube-system
