fix: update config to newest searxng image

--- a/kubernetes/apps/base/llm/searxng/helmrelease.yaml
+++ b/kubernetes/apps/base/llm/searxng/helmrelease.yaml
@@ -29,7 +29,6 @@ spec:
               tag: 2025.5.17-86373e7@sha256:2f45ccc0b330faa47d8706de883c6e583b38806e32b51172d93c381ce1d92f0b
             env:
               SEARXNG_BASE_URL: https://search.jory.dev
-              SEARXNG_URL: https://search.jory.dev
               SEARXNG_PORT: &port 8080
               SEARXNG_REDIS_URL: redis://searxng-dragonfly:6379
             envFrom:
@@ -97,4 +96,4 @@ spec:
         enabled: true
         type: emptyDir
         globalMounts:
-          - path: /etc/searxng
+          - path: /tmp
