--- a/kubernetes/apps/main/flux-system/headlamp/ks.yaml
+++ b/kubernetes/apps/main/flux-system/headlamp/ks.yaml
@@ -12,6 +12,7 @@ spec:
   path: ./kubernetes/apps/base/flux-system/headlamp
   postBuild:
     substitute:
+      APP: *app
       CLUSTER: main
       STORAGECLASS: ceph-filesystem
       STORAGECLASS_ACCESSMODE: ReadWriteMany
