feat: update gatus cert expiration

--- a/kubernetes/apps/main/observability/gatus/config.yaml
+++ b/kubernetes/apps/main/observability/gatus/config.yaml
@@ -36,6 +36,12 @@ endpoints:
     interval: 1h
     conditions:
       - "[CERTIFICATE_EXPIRATION] > 240h"
+  - name: nas-cert-expiration
+    group: domain
+    url: "https://nas.jory.dev"
+    interval: 1h
+    conditions:
+      - "[CERTIFICATE_EXPIRATION] > 240h"
   - name: domain-expiration
     group: domain
     url: "https://jory.dev"
