chore: cleanup all cert expirations

--- a/kubernetes/apps/main/observability/gatus/config.yaml
+++ b/kubernetes/apps/main/observability/gatus/config.yaml
@@ -30,7 +30,7 @@ endpoints:
     client:
       dns-resolver: tcp://1.1.1.1:53
     conditions: ["[STATUS] == 404"]
-  - name: cert-expiration
+  - name: main-cert-expiration
     group: domain
     url: "https://status.jory.dev"
     interval: 1h
@@ -42,12 +42,12 @@ endpoints:
     interval: 1h
     conditions:
       - "[CERTIFICATE_EXPIRATION] > 240h"
-  - name: domain-expiration
+  - name: utility-cert-expiration
     group: domain
-    url: "https://jory.dev"
+    url: "https://status-utility.jory.dev"
     interval: 1h
     conditions:
-      - "[DOMAIN_EXPIRATION] > 720h"
+      - "[CERTIFICATE_EXPIRATION] > 240h"
 remote:
   instances:
     - endpoint-prefix: ""
