feat: let plex write back to the nas

--- a/kubernetes/apps/base/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/base/media/plex/app/helmrelease.yaml
@@ -126,4 +126,4 @@ spec:
         globalMounts:
           - path: /data
             subPath: media
-            readOnly: true
+            # readOnly: true
